--- a/TestApp/package.json
+++ b/TestApp/package.json
@@ -1,5 +1,5 @@
 {
   "CurrentVersion": "1.3.2",
-  "MD5CheckSum": "",
+  "MD5CheckSum": "f3a882ae8e0787bb5d0f706f1841e36c",
   "RequiredOldVersions": []
 }
